feat: 회원 entity 구현

--- a/backend/Foody/src/main/resources/application-local.yml
+++ b/backend/Foody/src/main/resources/application-local.yml
@@ -12,3 +12,14 @@ spring:
         show_sql: true
         format_sql: true
         generate_statistics: true
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_PW}
+            scope:
+              - email
+              - profile
