--- a/backend/Foody/src/main/resources/application-local.yml
+++ b/backend/Foody/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/foody?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/foody?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
     username: root
     password: 1234
 
