--- a/frontend/foody/.eslintrc.json
+++ b/frontend/foody/.eslintrc.json
@@ -4,7 +4,6 @@
     "es2021": true
   },
   "extends": [
-    
     "plugin:@typescript-eslint/recommended",
     "airbnb",
     "airbnb/hooks",
@@ -16,9 +15,13 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": "tsconfig.json"
+    "project": "./tsconfig.json"
   },
-  "plugins": ["@typescript-eslint", "react", "prettier"],
+  "plugins": [
+    "@typescript-eslint",
+    "react",
+    "prettier"
+  ],
   "rules": {
     "import/no-extraneous-dependencies": 0,
     "prettier/prettier": [
