--- a/frontend/foody/tsconfig.json
+++ b/frontend/foody/tsconfig.json
@@ -18,9 +18,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types/*"
+    ],
+    "baseUrl": "./src"
   },
   "include": [
-    "src"
+    "./src/**/*"
   ]
 }
