test: 도커파일 실행 권한 수정 후 젠킨스 테스트

--- a/backend/Foody/Dockerfile
+++ b/backend/Foody/Dockerfile
@@ -10,6 +10,9 @@ COPY build.gradle .
 COPY settings.gradle .
 COPY src src
 
+# gradlew에 실행 권한 부여
+RUN chmod +x gradlew
+
 # 빌드 수행
 RUN ./gradlew build -x test
 
