fix: 도커 파일 디렉토리 수정

--- a/backend/Foody/Dockerfile
+++ b/backend/Foody/Dockerfile
@@ -20,7 +20,7 @@ RUN ./gradlew build -x test
 FROM openjdk:17-alpine
 
 # 빌드 스테이지에서 생성된 JAR 파일을 복사
-COPY --from=build /workspace/build/libs/*.jar app.jar
+COPY --from=build /build/libs/*.jar app.jar
 
 # 애플리케이션 실행
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "/app.jar"]
