test: 도커파일 빌드 명령어 수정 후 테스트

--- a/backend/Foody/Dockerfile
+++ b/backend/Foody/Dockerfile
@@ -14,13 +14,13 @@ COPY src src
 RUN chmod +x gradlew
 
 # 빌드 수행
-RUN ./gradlew build -x test
+RUN ./gradlew bootJar -x test
 
 # 런타임 스테이지
 FROM openjdk:17-alpine
 
 # 빌드 스테이지에서 생성된 JAR 파일을 복사
-COPY --from=build /build/libs/*.jar app.jar
+COPY --from=build /workspace/build/libs/*.jar app.jar
 
 # 애플리케이션 실행
 ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "/app.jar"]
