test: 도커파일 수정 후 젠킨스 테스트

--- a/backend/Foody/Dockerfile
+++ b/backend/Foody/Dockerfile
@@ -10,7 +10,7 @@ COPY build.gradle .
 COPY settings.gradle .
 COPY src src
 
-# gradlew에 실행 권한 부여
+# gradlew에 실행 권한 부여하기
 RUN chmod +x gradlew
 
 # 빌드 수행
