--- a/backend/Foody/src/main/resources/application.yml
+++ b/backend/Foody/src/main/resources/application.yml
@@ -1,2 +1,17 @@
 server:
   port: 80
+  servlet:
+    context-path: /api/v1
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+
+log4jdbc:
+  spylogdelegator:
+    name:
+      net.sf.log4jdbc.log.slf4j.Slf4jSpyLogDelegator
+
+  logging:
+    level:
+      com.foody: DEBUG
