fix: nginx.conf 파일 수정

--- a/frontend/foody/nginx.conf
+++ b/frontend/foody/nginx.conf
@@ -3,5 +3,11 @@ server {
 
     location / {
         root /app/build;
+        try_files $uri $uri/ /index.html;
+    }
+
+    location ~ ^/.+ {
+        root /app/build;
+        try_files $uri $uri/ /index.html;
     }
 }
