--- a/frontend/foody/nginx.conf
+++ b/frontend/foody/nginx.conf
@@ -2,12 +2,12 @@ server {
     listen 3000;
 
     location / {
-        root /app/build;
+        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
     }
 
-    location ~ ^/.+ {
-        root /app/build;
-        try_files $uri $uri/ /index.html;
-    }
+    # location ~ ^/.+ {
+    #     root /app/build;
+    #     try_files $uri $uri/ /index.html;
+    # }
 }
