--- a/frontend/foody/public/manifest.json
+++ b/frontend/foody/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "FOODY",
+  "name": "FOODY WebApp",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,8 +18,10 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "scope": "/",
+  "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color" : "#1AA274",
+  "background_color": "#ffffff",
+  "description" : "필수 영양소 기반 요리 추천 서비스"
 }
