chore: classnames 라이브러리 추가, eslint props spreading 규칙 추가

--- a/frontend/foody/.eslintrc.json
+++ b/frontend/foody/.eslintrc.json
@@ -23,6 +23,7 @@
     "prettier"
   ],
   "rules": {
+    "react/jsx-props-no-spreading": ["off"],
     "import/no-extraneous-dependencies": 0,
     "prettier/prettier": [
       "error",
