--- a/bigdata/Foody/Dockerfile
+++ b/bigdata/Foody/Dockerfile
@@ -1,26 +1,26 @@
-# 빌드 스테이지
+# Build stage
 FROM openjdk:17-alpine AS build
 
 WORKDIR /workspace
 
-# Gradle Wrapper, 설정 파일 및 소스 코드 복사
+# Copy Gradle Wrapper, config files and source code
 COPY gradlew .
 COPY gradle gradle
-COPY build.gradle .
-COPY settings.gradle .
+COPY build.gradle.kts .
+COPY settings.gradle.kts .
 COPY src src
 
-# gradlew에 실행 권한 부여하기
+# Give execute permission to gradlew
 RUN chmod +x gradlew
 
-# 빌드 수행
+# Perform build
 RUN ./gradlew bootJar -x test
 
-# 런타임 스테이지
+# Runtime stage
 FROM openjdk:17-alpine
 
-# 빌드 스테이지에서 생성된 JAR 파일을 복사
+# Copy JAR file generated from build stage
 COPY --from=build /workspace/build/libs/*.jar app.jar
 
-# 애플리케이션 실행
+# Run application
 ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=server", "/app.jar"]
