--- a/backend/Foody/docker-compose.yml
+++ b/backend/Foody/docker-compose.yml
@@ -15,6 +15,6 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/foody?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: 1234
-      SPRING_PROFILES_ACTIVE: server
+      SPRING_PROFILES_ACTIVE: prod
     ports:
       - "8082:8082"
