--- a/backend/Foody/src/main/resources/application-local.yml
+++ b/backend/Foody/src/main/resources/application-local.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/foody?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull
-    username: root
-    password: 1234
+    url: jdbc:h2:mem:foody
+    username: sa
+    password:
 
   jpa:
     hibernate:
