refactor: prod.yml jwt-secret 값 추가

--- a/backend/Foody/src/main/resources/application-prod.yml
+++ b/backend/Foody/src/main/resources/application-prod.yml
@@ -23,3 +23,11 @@ spring:
             scope:
               - email
               - profile
+jwt:
+  token:
+    secret: ${JWT_SECRET_KEY}
+
+logging:
+  level:
+    org.springframework.security: info
+    org.springframework.web: info
