refactor: Redis password docker-compose.yml에 추가

--- a/backend/Foody/docker-compose.yml
+++ b/backend/Foody/docker-compose.yml
@@ -22,5 +22,7 @@ services:
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
       GOOGLE_CLIENT_PW: ${GOOGLE_CLIENT_PW}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+
     ports:
       - "8082:8082"
