refactor: prod 환경의 로깅 레벨 debug 로 수정

--- a/backend/Foody/src/main/resources/application-prod.yml
+++ b/backend/Foody/src/main/resources/application-prod.yml
@@ -38,7 +38,7 @@ jwt:
 
 logging:
   level:
-    org.springframework.security: info
-    org.springframework.web: info
+    org.springframework.security: debug
+    org.springframework.web: debug
 server:
   port: 8082
