--- a/backend/Foody/docker-compose.yml
+++ b/backend/Foody/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       SPRING_PROFILES_ACTIVE: prod
 
       JAVA_OPTS: -Duser.timezone=Asia/Seoul
+      TZ: Asia/Seoul
 
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
