--- a/backend/Foody/docker-compose.yml
+++ b/backend/Foody/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       MYSQL_DATABASE: foody
     ports:
       - "3306:3306"
+    volumes:
+      - mysql-data:/var/lib/mysql
 
   my-spring-app:
     build: .
@@ -30,3 +32,5 @@ services:
 
     ports:
       - "8082:8082"
+volumes:
+  mysql-data:
