--- a/frontend/foody/package.json
+++ b/frontend/foody/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^18.2.7",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
