--- a/frontend/foody/package.json
+++ b/frontend/foody/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "sass": "^1.67.0",
