feat: 회원 가입,로그인 구현

--- a/backend/Foody/build.gradle
+++ b/backend/Foody/build.gradle
@@ -61,3 +61,9 @@ tasks.named('asciidoctor') {
     inputs.dir snippetsDir
     dependsOn test
 }
+
+asciidoctor {
+    dependsOn test
+    inputs.dir snippetsDir
+    outputDir file('src/docs/asciidoc')
+}
