--- a/backend/Foody/src/main/resources/application-local.yml
+++ b/backend/Foody/src/main/resources/application-local.yml
@@ -20,6 +20,7 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_PW}
+            redirect-uri: http://localhost/login/oauth2/code/google
             scope:
               - email
               - profile
