--- a/backend/Foody/src/main/resources/application-prod.yml
+++ b/backend/Foody/src/main/resources/application-prod.yml
@@ -28,8 +28,8 @@ spring:
     redis:
       time-to-live: 3600 # 데이터 유지 시간
       cache-null-values: false # NUll 캐싱 여부
-      host: https://j9c106.p.ssafy.io
-      port: 6380
+      host: localhost
+      port: 6379
       password: ${REDIS_PASSWORD}
 
 jwt:
