--- a/frontend/foody/package.json
+++ b/frontend/foody/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
