--- a/frontend/foody/package.json
+++ b/frontend/foody/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
