--- a/backend/Foody/src/main/resources/application.yml
+++ b/backend/Foody/src/main/resources/application.yml
@@ -14,3 +14,22 @@ log4jdbc:
   logging:
     level:
       com.foody: DEBUG
+
+cloud:
+  aws:
+    s3:
+      bucket: ${S3_BUCKET_NAME}
+    stack:
+      auto: false
+    region:
+      static: ${S3_REGION}
+      auto: false
+    credentials:
+      access-key: ${S3_ACCESS_KEY}
+      secret-key: ${S3_SECRET_KEY}
+
+spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
