--- a/backend/Foody/src/main/resources/application.yml
+++ b/backend/Foody/src/main/resources/application.yml
@@ -33,3 +33,14 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_PW}
+            redirect-uri: http://localhost/login/oauth2/code/google
+            scope:
+              - email
+              - profile
