--- a/frontend/foody/package.json
+++ b/frontend/foody/package.json
@@ -27,6 +27,7 @@
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "sass": "^1.67.0",
+    "swiper": "^10.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^5.1.4",
@@ -67,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/swiper": "^6.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
