--- a/frontend/foody/package.json
+++ b/frontend/foody/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
     "classnames": "^2.3.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
