fix: redirect URL 변경

--- a/backend/Foody/src/main/resources/application.yml
+++ b/backend/Foody/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_PW}
-            redirect-uri: http://localhost/login/oauth2/code/google
+            redirect-uri: https://j9c106.p.ssafy.io/login/oauth2/code/google
             scope:
               - email
               - profile
