--- a/frontend/foody/package.json
+++ b/frontend/foody/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-spring-bottom-sheet": "^3.4.1",
     "react-uuid": "^2.0.0",
     "recoil": "^0.7.7",
