--- a/foody-detect/requirements.txt
+++ b/foody-detect/requirements.txt
@@ -18,8 +18,8 @@ MarkupSafe==2.1.3
 matplotlib>=3.3.0
 mpmath==1.3.0
 networkx==3.1
-numpy==1.26.0
-opencv-python==4.8.0.76
+numpy>=1.22.2
+opencv-python>=4.1.1
 packaging==23.1
 pandas==2.1.1
 Pillow==10.0.1
@@ -28,16 +28,16 @@ py-cpuinfo==9.0.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
-PyYAML==6.0.1
-requests==2.31.0
-scipy==1.11.2
+PyYAML>=5.3.1
+requests>=2.23.0
+scipy>=1.4.1
 seaborn==0.12.2
 six==1.16.0
 smmap==5.0.1
 sympy==1.12
 thop==0.1.1.post2209072238
-torch==2.0.1
-torchvision==0.15.2
+torch>=1.8.0  # see https://pytorch.org/get-started/locally (recommended)
+torchvision>=0.9.0
 tqdm==4.66.1
 typing_extensions==4.8.0
 tzdata==2023.3
