--- a/foody-detect/requirements.txt
+++ b/foody-detect/requirements.txt
@@ -21,9 +21,9 @@ networkx==3.1
 numpy>=1.22.2
 opencv-python>=4.1.1
 packaging==23.1
-pandas==2.1.1
-Pillow==10.0.1
-psutil==5.9.5
+pandas>=1.1.4
+Pillow>=7.1.2
+psutil
 py-cpuinfo==9.0.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
