--- a/foody-detect/Dockerfile
+++ b/foody-detect/Dockerfile
@@ -4,6 +4,12 @@ FROM python:3.8-slim-buster
 # 작업 디렉터리 설정
 WORKDIR /app
 
+# 필요한 OS 패키지 설치
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
+
 # 의존성 파일들을 컨테이너에 복사
 COPY requirements.txt requirements.txt
 
@@ -15,7 +21,7 @@ RUN pip install --upgrade pip && \
 COPY . .
 
 # Flask 실행을 위한 환경 변수 설정
-ENV FLASK_APP=app.py
+ENV FLASK_APP=main.py
 ENV FLASK_RUN_HOST=0.0.0.0
 
 # 5000 포트로 서비스를 실행
