fix: ENV 키워드 수정

--- a/frontend/foody/Dockerfile
+++ b/frontend/foody/Dockerfile
@@ -12,7 +12,7 @@ ARG REACT_APP_OAUTH_DEVELOPE_URL
 ENV REACT_APP_SERVER_BASE_URL=${REACT_APP_SERVER_BASE_URL}
 ENV REACT_APP_OAUTH_SERVER_URL=${REACT_APP_OAUTH_SERVER_URL}
 ENV REACT_APP_OAUTH_DEVELOPE_URL=${REACT_APP_OAUTH_DEVELOPE_URL}
-REACT_APP_DEVELOP_BASE_URL=${REACT_APP_DEVELOP_BASE_URL}
+ENV REACT_APP_DEVELOP_BASE_URL=${REACT_APP_DEVELOP_BASE_URL}
 
 # 의존성 설치
 COPY package.json package-lock.json ./
