--- a/frontend/foody/Dockerfile
+++ b/frontend/foody/Dockerfile
@@ -4,15 +4,15 @@ FROM node:16 AS build
 WORKDIR /app
 
 # 매개변수 선언
-# ARG REACT_APP_SERVER_BASE_URL
-# ARG REACT_APP_OAUTH_SERVER_URL
-# ARG REACT_APP_OAUTH_DEVELOPE_URL
+ARG REACT_APP_SERVER_BASE_URL
+ARG REACT_APP_OAUTH_SERVER_URL
+ARG REACT_APP_OAUTH_DEVELOPE_URL
 
-# # 환경 변수로 설정
-# ENV REACT_APP_SERVER_BASE_URL=${REACT_APP_SERVER_BASE_URL}
-# ENV REACT_APP_OAUTH_SERVER_URL=${REACT_APP_OAUTH_SERVER_URL}
-# ENV REACT_APP_OAUTH_DEVELOPE_URL=${REACT_APP_OAUTH_DEVELOPE_URL}
-# ENV REACT_APP_DEVELOP_BASE_URL=${REACT_APP_DEVELOP_BASE_URL}
+# 환경 변수로 설정
+ENV REACT_APP_SERVER_BASE_URL=${REACT_APP_SERVER_BASE_URL}
+ENV REACT_APP_OAUTH_SERVER_URL=${REACT_APP_OAUTH_SERVER_URL}
+ENV REACT_APP_OAUTH_DEVELOPE_URL=${REACT_APP_OAUTH_DEVELOPE_URL}
+ENV REACT_APP_DEVELOP_BASE_URL=${REACT_APP_DEVELOP_BASE_URL}
 
 # 의존성 설치
 COPY package.json package-lock.json ./
