chore: docker-compose 파일 수정

--- a/frontend/foody/docker-compose.yml
+++ b/frontend/foody/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - REACT_APP_SERVER_BASE_URL: ${REACT_APP_SERVER_BASE_URL}
-      - REACT_APP_OAUTH_SERVER_URL: ${REACT_APP_OAUTH_SERVER_URL}
-      - REACT_APP_OAUTH_DEVELOPE_URL: ${REACT_APP_OAUTH_DEVELOPE_URL}
-      - REACT_APP_DEVELOP_BASE_URL: ${REACT_APP_DEVELOP_BASE_URL}
-      - TZ: Asia/Seoul
+      - REACT_APP_SERVER_BASE_URL=${REACT_APP_SERVER_BASE_URL}
+      - REACT_APP_OAUTH_SERVER_URL=${REACT_APP_OAUTH_SERVER_URL}
+      - REACT_APP_OAUTH_DEVELOPE_URL=${REACT_APP_OAUTH_DEVELOPE_URL}
+      - REACT_APP_DEVELOP_BASE_URL=${REACT_APP_DEVELOP_BASE_URL}
+      - TZ=Asia/Seoul
