fix: react 환경변수 인식 안되는 오류 수정

--- a/frontend/foody/Dockerfile
+++ b/frontend/foody/Dockerfile
@@ -1,6 +1,11 @@
 # 빌드 단계
 FROM node:16 AS build
 
+ARG REACT_APP_SERVER_BASE_URL
+ARG REACT_APP_OAUTH_SERVER_URL
+ARG REACT_APP_OAUTH_DEVELOPE_URL
+ARG REACT_APP_DEVELOP_BASE_URL
+
 WORKDIR /app
 
 # 의존성 설치
