--- a/frontend/foody/docker-compose.yml
+++ b/frontend/foody/docker-compose.yml
@@ -7,10 +7,10 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        - REACT_APP_SERVER_BASE_URL: ${REACT_APP_SERVER_BASE_URL}
-        - REACT_APP_OAUTH_SERVER_URL: ${REACT_APP_OAUTH_SERVER_URL}
-        - REACT_APP_OAUTH_DEVELOPE_URL: ${REACT_APP_OAUTH_DEVELOPE_URL}
-        - REACT_APP_DEVELOP_BASE_URL: ${REACT_APP_DEVELOP_BASE_URL}
+        - REACT_APP_SERVER_BASE_URL=${REACT_APP_SERVER_BASE_URL}
+        - REACT_APP_OAUTH_SERVER_URL=${REACT_APP_OAUTH_SERVER_URL}
+        - REACT_APP_OAUTH_DEVELOPE_URL=${REACT_APP_OAUTH_DEVELOPE_URL}
+        - REACT_APP_DEVELOP_BASE_URL=${REACT_APP_DEVELOP_BASE_URL}
     ports:
       - "3000:3000"
     environment:
