--- a/backend/Foody/src/main/resources/application-local.yml
+++ b/backend/Foody/src/main/resources/application-local.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:foody
-    username: sa
-    password:
+    url: jdbc:mysql://localhost:3306/foody?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+    username: ${MYSQL_USER}
+    password: ${MYSQL_PASSWORD}
 
   jpa:
     hibernate:
