--- a/backend/Foody/build.gradle
+++ b/backend/Foody/build.gradle
@@ -57,6 +57,11 @@ dependencies {
 
     // aws s3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+    //csv util
+    // https://mvnrepository.com/artifact/com.opencsv/opencsv
+    implementation 'com.opencsv:opencsv:3.7'
+
 }
 
 tasks.named('test') {
