--- a/backend/Foody/docker-compose.yml
+++ b/backend/Foody/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     build: .
     depends_on:
       - db
+    image: back-image:latest
     container_name: back-container
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/foody?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
