feat: 끼니별, 추천용 영양 정보 반환 메서드 구현

--- a/backend/Foody/docker-compose.yml
+++ b/backend/Foody/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       NAVER_CLIENT_ID: ${NAVER_CLIENT_ID}
       NAVER_CLIENT_SECRET: ${NAVER_CLIENT_SECRET}
       X_OCR_SECRET : ${X_OCR_SECRET}
+      DATA_URL : ${DATA_URL}
 
     ports:
       - "8082:8082"
