--- a/backend/Foody/src/main/resources/application-local.yml
+++ b/backend/Foody/src/main/resources/application-local.yml
@@ -12,6 +12,7 @@ spring:
         show_sql: true
         format_sql: true
         generate_statistics: true
+    defer-datasource-initialization: true
 
   cache:
     type: redis
@@ -21,6 +22,11 @@ spring:
       host: localhost
       port: 6379
       password: ${REDIS_PASSWORD}
+
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:ingredient/foody_ingredient_category.sql
 
 jwt:
   token:
