refactor: sql 로그 제거
Former-commit-id: 12d2cb0c701f426a51b9702ff126db8cabd0d8d3

--- a/backend/Foody/src/main/resources/application-prod.yml
+++ b/backend/Foody/src/main/resources/application-prod.yml
@@ -9,9 +9,9 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        show_sql: true
-        format_sql: true
-        generate_statistics: true
+        show_sql: false
+        format_sql: false
+        generate_statistics: false
     defer-datasource-initialization: true
 
   security:
