refactor: docker-compose.yml 수정

--- a/frontend/foody/docker-compose.yml
+++ b/frontend/foody/docker-compose.yml
@@ -11,6 +11,8 @@ services:
         - REACT_APP_OAUTH_SERVER_URL=${REACT_APP_OAUTH_SERVER_URL}
         - REACT_APP_OAUTH_DEVELOPE_URL=${REACT_APP_OAUTH_DEVELOPE_URL}
         - REACT_APP_DEVELOP_BASE_URL=${REACT_APP_DEVELOP_BASE_URL}
+        - REACT_APP_YOLO_SERVER_URL=${REACT_APP_YOLO_SERVER_URL}
+        - REACT_APP_YOLO_DEVELOP_URL=${REACT_APP_YOLO_DEVELOP_URL}
     ports:
       - "3000:3000"
     environment:
