feat: 추천 로직 변경
Former-commit-id: 243dcb8fecd7fdd1505d930fea33ae58acb4bbc2

--- a/backend/Foody/src/main/resources/application-test.yml
+++ b/backend/Foody/src/main/resources/application-test.yml
@@ -1,9 +1,8 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:foodyTest
-    username: sa
-    password:
-
+    url: jdbc:mysql://127.0.0.1:3306/foody?useUnicode=true&rewriteBatchedStatements=true&useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+    username: ${MYSQL_USER}
+    password: ${MYSQL_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: create
@@ -11,6 +10,13 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+        generate_statistics: true
+    defer-datasource-initialization: true
+
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:ingredient/foody_ingredient_category.sql
 
   cache:
     type: redis
