refactor: 아키텍처 및 검색기능 추가

--- a/backend/Foody/src/main/resources/application.yml
+++ b/backend/Foody/src/main/resources/application.yml
@@ -40,3 +40,8 @@ spring:
             scope:
               - email
               - profile
+  jpa:
+    properties:
+      hibernate:
+        jdbc:
+          batch_size: 50
